--- a/index.css
+++ b/index.css
@@ -1,5 +1,230 @@
 *{
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+}
+/* Step 1: Common Properties
+  These styles are required to make icons render reliably */
+  .icon::before {
+    display: inline-block;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+  }
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+ul{
+    list-style-type: none;
+}
+
+.main-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 2rem;
+    height: 90vh;
+}
+
+.welcome{
+    width: 90%;
+    max-width: 1600px;
+    height: 100%;
+}
+
+/* Social icons */
+.social-icons{
+    position: fixed;
+    z-index: 100;
+    display: flex;
+    flex-direction: column;
+    right: 5%;
+    top: 38%;
+}
+
+.social-icons > a{
+    margin: 1rem;
+    font-size: x-large;
+    color: rgb(164, 5, 108);
+}
+
+
+/* navigation bar */
+.navigation-bar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 5%;
+    right: 5%;
+    background-color: white;
+    box-shadow: 0px 2px rgb(255, 247, 247);
+}
+
+.logo{
+    padding: 1rem;
+    border: 0.1rem solid rgb(255, 52, 184);
+    height: fit-content;
+}
+
+.logo>a{
+    font-size: x-large;
+    font-weight: 800;
+}
+
+.logo>a:hover{
+    color: rgb(255, 52, 184);
+}
+
+.nav-items{
+    display: flex;
+    justify-content: space-around;
+    width: 50%;
+}
+
+.nav-items>li>a{
+    color: rgb(208, 7, 138);
+}
+
+.nav-items>li>a:hover{
+    color: rgb(239, 25, 164);
+    text-decoration: underline;
+    text-underline-offset: 1rem;
+}
+
+/* Home content */
+/* Line and Hello */
+hr {
+    width: 3rem;
+    border-top: 2px solid rgb(255, 52, 184);
+    height: fit-content;
+    margin-right: 1rem;
+}
+
+.welcome-text{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    color: rgb(255, 52, 184);
+    margin-bottom: 2.4rem;
+}
+
+.home-content{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.title-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.title-container h1{
+    font-size: 3rem;
+}
+
+.title-container p{
+    font-size: 1.5rem;
+}
+
+.home-img{
+    margin-left: 2rem;
+    border-radius: 25%;
+    width: 20rem;
+    height: 20rem;
+}
+
+
+.home-buttons{
+    margin-top: 5rem;
+    
+}
+
+.hire{
+    padding: 5px 2rem;
+    font-size: 1.16rem;
+    margin-right: 3rem;
+    cursor: pointer;
+    background-color: rgb(200, 9, 133);
+    color: white;
+    border: none;
+    border-radius: 8px;
+}
+.hire:hover{
+    background-color: rgb(70, 3, 47);
+}
+
+.download{
+    background: none;
+    border: none;
+    font-size: 1.16rem;
+    cursor: pointer;
+    color: rgb(200, 9, 133);
+}
+.download:hover{
+    text-decoration: underline;
+    text-underline-offset: 10px;
+}
+
+
+footer{
+    
+    color: white;
+    margin-top: 3.5rem;
+    background-color: rgb(69, 1, 45);
+    padding: 4rem 2rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+section>h1{
+    margin-bottom: 2rem;
+}
+.footer-ls>li>a>span{
+    padding: 2px;
+    background-color: white;
+    color: black;
+    margin-right: 1rem;
+    border-radius: 100%;
+}
+.footer-ls>li{
+    margin: 8px 0;
+}
+.footer-ls>li>a{
+    color: white;
+    display: flex;
+    align-items: center;
+}
+
+.social{
+    margin-top: 1.5rem;
+}
+
+.social>a{
+    font-size: x-large;
+    color: rgb(255, 120, 208);
+}
+
+.social>a:nth-child(2){
+    margin: 0 1rem;
+}
+
+.contact-ls>li>a{
+    color: white;
+    display: flex;
+}
+
+.contact-ls>li>a>span{
+    color: rgb(255, 120, 208);
+    margin-right: 1rem;
+}
+
+.contact-ls>li{
+    margin: 1rem 0;
 }
