--- a/About Me.css
+++ b/About Me.css
@@ -1,12 +1,10 @@
 .welcome-text {
   text-align: right;
-  margin-top: 5rem;
+  margin-bottom: 5rem;
   margin-right: 5%;
-  margin-bottom: 0px !important;
 }
 
 .about-me-paragraph {
-  margin-top: 5rem;
   margin-left: 3rem;
 }
 .about-me-paragraph p {
@@ -33,3 +31,4 @@
     width: 90%;
     align-self: center;
 }
+
