--- a/skills.css
+++ b/skills.css
@@ -14,7 +14,7 @@ box-shadow: none;}
 
 .cards{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     flex-wrap: wrap;
     width: 100%;
     justify-content: space-around;
@@ -26,7 +26,7 @@ box-shadow: none;}
     padding: 1rem;
     display: flex;
     flex-direction: column;
-    border-radius: 5px;
+    border-radius: 35px;
     width: 200px;
     height: 200px;
     justify-content: center;
@@ -40,4 +40,16 @@ box-shadow: none;}
 
 .card:nth-child(3){
     background-color: rgb(176, 255, 158);
+}
+
+.card:nth-child(6){
+    background-color: rgb(255, 158, 210);
+}
+
+.card:nth-child(4){
+    background-color: rgb(176, 255, 158);
+}
+
+.card:nth-child(5){
+    background-color: rgb(208, 158, 255);
 }
