--- a/index.css
+++ b/index.css
@@ -34,6 +34,31 @@ ul{
     height: 100%;
 }
 
+.txt-content{
+    display: flex;
+    width: 100%;
+}
+
+.normal-txt{
+    font-size: 3.5rem;
+    width: 15%;
+}
+
+.change-txt{
+    font-size: 1rem;
+    color:rgb(255, 52, 184) ;
+    font-weight: 600;
+    position: relative;
+}
+.txt-content .change-txt ::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    
+    animation: animatetxt 5s steps(25) infinite;
+}
+
 /* Social icons */
 .social-icons{
     position: fixed;
@@ -227,4 +252,20 @@ section>h1{
 
 .contact-ls>li{
     margin: 1rem 0;
+}
+
+@keyframes animatetxt{
+    3%{
+        left: 0;
+    }
+    30%{
+        left: 100%;
+    }
+    80%{
+        left: 100%;
+    }
+    100%{
+        left: 0;
+    }
+
 }
