--- a/index.css
+++ b/index.css
@@ -115,7 +115,7 @@ hr {
     flex-direction: row;
     align-items: center;
     color: rgb(255, 52, 184);
-    margin-bottom: 2.4rem;
+    /* margin-bottom: 2.4rem; */
 }
 
 .home-content{
@@ -126,29 +126,32 @@ hr {
 }
 
 .title-container{
-    display: flex;
+    /* display: flex; */
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
+    text-align: center;
+    
 }
 
 .title-container h1{
-    font-size: 3rem;
+    font-size: 2rem;
 }
 
 .title-container p{
-    font-size: 1.5rem;
+    font-size: 1rem;
 }
 
 .home-img{
-    margin-left: 2rem;
-    border-radius: 25%;
-    width: 20rem;
-    height: 20rem;
+    /* margin-left: 2rem; */
+    border-radius: 100%;
+    width: 10rem;
+    height: 10rem;
 }
 
 
 .home-buttons{
     margin-top: 5rem;
+    text-align: center;
     
 }
 
