--- a/index.css
+++ b/index.css
@@ -29,13 +29,13 @@ ul{
     flex-direction: column;
     align-items: center;
     margin-top: 2rem;
-    height: 130vh;
+   
 }
 
 .welcome{
     width: 90%;
     max-width: 1600px;
-    height: 100%;
+   
 }
 
 
@@ -119,7 +119,7 @@ hr {
 }
 
 .home-content{
-    height: 100%;
+    height: 80vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -166,6 +166,13 @@ hr {
 
 }
 
+.get-intouch > .home__subtitle {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+
+}
+
+
 .hire{
     padding: 5px 2rem;
     font-size: 1.16rem;
@@ -192,11 +199,38 @@ hr {
     text-underline-offset: 10px;
 }
 
+.social-cards{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 3.5rem 0;
+
+}
+
+.scards{
+    display: flex;
+    margin-top: 2rem;
+}
+
+.s-card{
+    width: 6rem;
+    height: 6rem;
+    box-shadow: 1px 1px 5px grey;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0 1rem;
+
+
+}
+
 
 footer{
     
     color: white;
-    margin-top: 3.5rem;
+    /* margin-top: 3.5rem; */
     background-color: rgb(69, 1, 45);
     padding: 4rem 2rem;
     display: grid;
@@ -213,6 +247,11 @@ section>h1{
     margin-right: 1rem;
     border-radius: 100%;
 }
+
+.footer-ls .material-symbols-outlined {
+    font-size: 15px !important;
+}
+
 .footer-ls>li{
     margin: 8px 0;
 }
