--- a/project.css
+++ b/project.css
@@ -15,12 +15,13 @@
 }
 
 .card{
-    width: max-content;
     background-color: rgb(208, 158, 255);
     padding: 2rem 1rem;
     display: flex;
     flex-direction: column;
     border-radius: 5px;
+    width: 265px;
+    grid-gap: 1rem;
 }
 
 .card:nth-child(2){
@@ -36,16 +37,20 @@
     height: 250px;
     border-radius: 5px;
     margin-top: 1rem;
+    align-self: center;
 }
 
 .stack{
     display: flex;
+    flex-wrap: wrap;
+    justify-content: left;
 }
 
 .stack p{
     padding: 5px 1rem;
     background-color: green;
     color: white;
+    margin-top: 1rem;
 }
 
 .stack p:nth-child(2){
