--- a/Contact.css
+++ b/Contact.css
@@ -7,6 +7,7 @@ body{background-color:#F7D4F6;}
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-top: 3rem;
     
     
 }
@@ -33,7 +34,8 @@ body{background-color:#F7D4F6;}
     border-radius: 40px;
     width: 75%;
     padding: 10px 10px;
-    margin-top: 3rem;
+    margin-top: 1rem;
+    margin-bottom: 3rem;
     
 }
 
