--- a/experience.css
+++ b/experience.css
@@ -4,8 +4,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-end;
+    margin-top: 3rem;
 }
-
 
 .cards{
     display: flex;
@@ -13,15 +13,16 @@
     width: 100%;
     flex-direction: column;
     justify-content: space-around;
+    margin-bottom: 3rem;
 }
 
 .card{
     width: 900px;
-    background-color: #F7D4F6;
+    /* background-color: #F7D4F6; */
     padding: 2rem 1rem;
     display: flex;
     flex-direction: column;
     border-radius: 4px;
-    border: #FF0099 solid 1px;
+    border: #44373f solid 1px;
     margin-top: 25px;
 }
