--- a/About Me.css
+++ b/About Me.css
@@ -5,21 +5,20 @@
 }
 
 .about-me-paragraph {
-  margin-left: 3rem;
   width: 50%;
   text-align: center;
+  /* align-self: center; */
  
 }
 .about-me-paragraph p {
   font-size: 1rem;
 }
 
-.title-container img {
-  margin-left: 2rem;
-  border-radius: 25%;
-  width: 15rem;
-  height: 15rem;
+.about-me-paragraph h3{
+  margin: 2rem;
 }
+
+
 
 .home-content-abt {
     height: 100%;
@@ -34,6 +33,9 @@
 .title-container{
     width: 90%;
     align-self: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .cards{
